--- a/decoder/views/index.html
+++ b/decoder/views/index.html
@@ -11,42 +11,19 @@
   <h3>Board Status</h3>
   <span id="status"></span>
 
-  <h3>Sensor</h3>
-  <span id="sensor"></span>
-  <div id="vis" style="width:100px; height:100px"></div>
+  <h3>Sensor: raw</h3>
+  <span id="sensor_raw"></span>
+  <div id="vis_raw" style="width:50px; height:50px"></div>
+
+  <h3>Sensor: average</h3>
+  <span id="sensor_average"></span>
+  <div id="vis_average" style="width:50px; height:50px"></div>
 
 
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
-
-  <script>
-    var socket = io.connect('http://localhost:3000');
-
-    socket.on('board', function (data) {
-      console.info(data)
-      $("#status").text(data.status)
-    });
-
-    socket.on('sensor', function (data) {
-      //console.info(data)
-      $("#sensor").text(data.value)
-
-      function componentToHex(c) {
-        var hex = c.toString(16);
-        return hex.length == 1 ? "0" + hex : hex;
-      }
-
-      function rgbToHex(r, g, b) {
-        return "#" + componentToHex(r) + componentToHex(g) + componentToHex(b);
-      }
-
-      var round = Math.round( data.value );
-      var col = rgbToHex(round,round,round);
-      console.log(col)
-      $("#vis").css("background-color", col)
-    });
-  </script>
+  <script src="/client.js"></script>
 
 </body>
 </html>
