--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -44,7 +44,7 @@
           <h1>{{second_step_title}}</h1>
           <div>
             {{name_instruction}}
-            <input id="name" type="text">
+            <input id="username" type="text">
           </div>
 
           <h1>{{third_step_title}}</h1>
