--- a/decoder/src/views/base.html
+++ b/decoder/src/views/base.html
@@ -21,9 +21,9 @@
 
 
   <script src="/socket.io/socket.io.js"></script>
-  <script src="/vendor/jquery/dist/jquery.min.js"></script>
-  <script src="/vendor/lodash/dist/lodash.min.js"></script>
-  <script src="/client.js"></script>
+  <script src="/js/vendor/jquery/dist/jquery.min.js"></script>
+  <script src="/js/vendor/lodash/dist/lodash.min.js"></script>
+  <script src="/js/client.js"></script>
 
 </body>
 </html>
