--- a/encoder/src/static/css/main.less
+++ b/encoder/src/static/css/main.less
@@ -32,6 +32,27 @@
     text-align: center;
 }
 
+// forms
+.instruction{
+  font-weight: bold;
+  text-align: center;
+  font-size: 25px;
+}
+
+input{
+  font-size: 57px;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+  width: 100%;
+  margin-top: 50px;
+}
+
+
 // Wizard
 .wizard, .tabcontrol{
     display: block;
@@ -210,7 +231,7 @@
 .wizard > .content > .body input
 {
     display: block;
-    border: 1px solid #ccc;
+   // border: 1px solid #ccc;
 }
 
 .wizard > .content > .body input[type="checkbox"]
