plug opencv and image processing

--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -68,7 +68,7 @@
 
           <h1>{{four_step_title}}</h1>
           <div class="col-md-10 col-md-offset-1">
-            <div class="col-md-10 instruction">
+            <div id="picture_instruction" class="col-md-10 instruction">
               {{picture_instruction}}
             </div>
             <div id="picture" class="col-md-10">
