--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -101,6 +101,8 @@
       <script src="js/vendor/jquery-steps/build/jquery.steps.min.js"></script>
       <script src="js/vendor/jquery-timer/jquery.timer.js"></script>
       <script src="js/vendor/jquery-color/jquery.color.js"></script>
+      <script src="js/vendor/spin.js/spin.js"></script>
+      <script src="js/vendor/spin.js/jquery.spin.js"></script>
 
       <script src="js/main.js"></script>
     </body>
