--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -52,7 +52,7 @@
               {{name_instruction}}
             </div>
             <div class="col-md-10 input">
-              <input autofocus id="username" type="text" autocomplete="off" >
+              <input autofocus id="username" type="text" autocomplete="off" class="required">
             </div>
           </div>
 
@@ -62,7 +62,7 @@
               {{email_instruction}}
             </div>
             <div class="col-md-10 input">
-              <input autofocus id="email" type="text" autocomplete="off">
+              <input autofocus id="email" type="text" autocomplete="off" class="required">
             </div>
           </div>
 
