error msgs localized

--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -22,7 +22,10 @@
             next: '{{next}}',
             previous: '{{previous}}',
             loading: '{{loading}}',
-            finifsh: '{{finish}}'
+            finifsh: '{{finish}}',
+            error_picture: '{{error_picture}}',
+            processing: '{{processing}}',
+            result: '{{result}}'
           }
         </script>
 
