--- a/encoder/src/views/base.html
+++ b/encoder/src/views/base.html
@@ -92,6 +92,9 @@
             <div id="last" class="col-md-10 instruction">
               {{the_end}}
             </div>
+            <div id="svg" class="col-md-10">
+              svg!
+            </div>
           </div>
         </div>
       </div>
