--- a/decoder/src/views/base.html
+++ b/decoder/src/views/base.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>decoder v 0.0.1</title>
+  <link rel="stylesheet" href="/js/vendor/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/css/main.css">
 </head>
 <body>
 
@@ -23,6 +25,7 @@
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/vendor/jquery/dist/jquery.min.js"></script>
   <script src="/js/vendor/lodash/dist/lodash.min.js"></script>
+  <script src="/js/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
   <script src="/js/client.js"></script>
 
 </body>
