--- a/decoder/src/static/css/main.less
+++ b/decoder/src/static/css/main.less
@@ -22,6 +22,15 @@
   font-style: normal;
 }
 
+h2{
+        font-size: 80px;
+        font-family: 'MentoneLigBold';
+        text-align: center;
+    }
+
+.loading{
+  margin-top: 150px;
+}
 // Title
 #title{
     h1{
