--- a/decoder/src/views/scanning.html
+++ b/decoder/src/views/scanning.html
@@ -26,11 +26,10 @@
     </div>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <ul class="bxslider">
-          <li><img src="/img/instruction_1.png" /></li>
-          <li><img src="/img/instruction_2.png" /></li>
-          <li><img src="/img/instruction_3.png" /></li>
-        </ul>
+        <h2>escaneando</h2>
+        <div class="loading">
+
+        </div>
       </div>
     </div> <!-- /container -->
     <div class="row">
