--- a/decoder/src/static/css/main.less
+++ b/decoder/src/static/css/main.less
@@ -22,6 +22,20 @@
   font-style: normal;
 }
 
+//portrait
+#portrait{
+  width: 160px;
+  margin-left: auto;
+  margin-right: auto;
+  .pixels{
+    width:10px;
+    height:10px;
+    background-color:red;
+    float:left;
+    font-size: 5px;
+  }
+}
+
 h2{
         font-size: 80px;
         font-family: 'MentoneLigBold';
