--- a/decoder/src/views/scanning.html
+++ b/decoder/src/views/scanning.html
@@ -26,9 +26,22 @@
     </div>
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
-        <h2>escaneando</h2>
+        <h2>capturando datos</h2>
         <div class="loading">
 
+        </div>
+
+        <div id="bar">
+          <h3>nivel de color</h3>
+
+          <div id="indicator">
+            <div id="l5" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+            <div id="l4" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+            <div id="l3" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+            <div id="l2" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+            <div id="l1" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+            <div id="l0" class="ir_array" style="width:10px;height:10px;background-color:#fff"></div>
+          </div>
         </div>
       </div>
     </div> <!-- /container -->
