--- a/decoder/src/static/css/main.less
+++ b/decoder/src/static/css/main.less
@@ -22,6 +22,10 @@
   font-style: normal;
 }
 
+body {
+  cursor: none;
+}
+
 //portrait
 #portrait{
   width: 160px;
@@ -33,6 +37,21 @@
     background-color:red;
     float:left;
     font-size: 5px;
+  }
+}
+
+#bar{
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  padding-top: 60px;
+
+  #indicator{
+    margin-top: 30px;
+    width: 20px;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
 
