--- a/decoder/src/views/scanning.html
+++ b/decoder/src/views/scanning.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             body {
-                padding-top: 70px;
+                padding-top: 30px;
                 padding-bottom: 20px;
             }
         </style>
@@ -27,9 +27,9 @@
     <div class="row">
       <div class="col-md-10 col-md-offset-1">
         <h2>capturando datos</h2>
-        <div class="loading">
+        <!-- <div class="loading">
 
-        </div>
+        </div> -->
 
         <div id="bar">
           <h3>nivel de color</h3>
